Update CSS and JS to match corrected HTML IDs and fix .hidden visibility

--- a/DOM_new/dommy.css
+++ b/DOM_new/dommy.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playwrite+NZ+Basic:wght@100..400&display=swap');
 
-.quiz-section, .score-section {  
+.quiz-container, .score-container {  
     background-color: rgb(221, 233, 236);  
     width: 50%;  
     margin: 50px auto;  
@@ -9,7 +9,7 @@
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 .question {
